2007-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/regexp.bench: add more RE tests for core ReToGlob perf

2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/read.bench: add grep-glob and cat benchmarks.
	Allow changing buffer benchmarks for 8.3+.
	Allow binary translation for 8.0.

2006-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/encoding.bench: add result validation checks

	* runbench.tcl (outputData-text-item): centralize item output format

	* tcl/sha1.bench, tcl/md5.bench: return if < Tcl 8.2

2006-11-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* runbench.tcl (outputData-text): allow more space in output,
	check for double vals in non-normalized output path.

	* tcl/gccont.bench (GCCont_cpb::cGCC): correct init to work on 8.5
	changes for incr auto-init (keeps compat with other versions).

	* tcl/fcopy.bench: use bench_tmpfile where appropriate

	* tcl/vars.bench (var-incr-*): add var type incr benchmarks

2006-10-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tcl/sha1.bench: Avoid using method B with tcl 8.5. Method B
	                  relies on the implicit truncation to 32 bit
	                  ints that exists in 8.4. In 8.5 it promotes
	                  to bignums and takes forever.
	* tcl/binary.bench: Updated to include TIP 275 unsigned flags
	                    where available.

2005-10-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tcl/sha1.bench:  Updated the sha1 and md5 implementations with
	* tcl/md5.bench:   current tcllib code.

2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/parse.bench: ensure file size is consistent between interp
	runs with formatted BOUND string.

2004-12-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/runbench.1: fix doc for -throwerrors [Bug 1091766]

	* runbench.tcl (getInterps): use exec << instead of echo [Bug 1091764]

2004-12-24  Miguel Sofer <msofer@users.sf.net>

	* tcl/namespace.bench: new benchmark, measures the cost of calling